--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/form_login?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
     username: root
-    password: root
+    password: root1
   jpa:
     show-sql: true
     hibernate:
